fix(owner-etherscan-link): add etherscan link and change spacing
also re-used some gold color vars

--- a/src/views/Logbook/LogbookDetail/Content/styles.module.css
+++ b/src/views/Logbook/LogbookDetail/Content/styles.module.css
@@ -7,6 +7,6 @@
   padding: var(--spacing-base);
   font-size: var(--font-size-md-s);
   line-height: 1.5rem;
-  border: 4px solid #977229;
+  border: 4px solid var(--color-logbook-gold-light);
   box-shadow: 0 1px 16px rgb(0 0 0 / 2%);
 }
