--- a/src/views/Logbook/LogbookDetail/LogList/styles.module.css
+++ b/src/views/Logbook/LogbookDetail/LogList/styles.module.css
@@ -9,7 +9,7 @@
   font-size: var(--font-size-md-s);
   line-height: 1.5rem;
   white-space: pre-wrap;
-  border: 4px solid #977229;
+  border: 4px solid var(--color-logbook-gold-light);
   box-shadow: 0 1px 16px rgb(0 0 0 / 2%);
 
   & footer {
