--- a/src/views/Logbook/LogbookDetail/LogbookEditor/Editor/styles.module.css
+++ b/src/views/Logbook/LogbookDetail/LogbookEditor/Editor/styles.module.css
@@ -7,7 +7,7 @@
   color: var(--color-black);
   text-align: left;
   background: var(--color-white);
-  border: 4px solid var(--color-logbook-gold);
+  border: 4px solid var(--color-logbook-gold-light);
   opacity: 100%;
   transition: opacity ease-in-out 0.2s;
 
