--- a/src/views/Logbook/LogbookList/Logbooks/Item/styles.module.css
+++ b/src/views/Logbook/LogbookList/Logbooks/Item/styles.module.css
@@ -4,7 +4,7 @@
   flex-flow: column nowrap;
   align-items: stretch;
   padding: var(--spacing-base);
-  border: 4px solid #977229;
+  border: 4px solid var(--color-logbook-gold-light);
 }
 
 .content {
@@ -12,7 +12,10 @@
 }
 
 .owner {
+  margin-top: var(--spacing-base);
   overflow: hidden;
+  font-size: var(--font-size-xs);
+  color: var(--color-grey);
   text-overflow: ellipsis;
   white-space: nowrap;
 }
